--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "oceanic.js": "^1.8.1",
     "pdf-to-printer": "^5.6.0",
     "unix-print": "^1.3.2"
+  },
+  "devDependencies": {
+    "pdf-to-png-converter": "^3.1.0"
   }
 }
